--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,10 +5,13 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306/librarymanager"
+    url: jdbc:oracle:thin:@localhost:1521:XE
     username: root
     password: ""
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+    driver-class-name: oracle.jdbc.OracleDriver
+
+jpa:
+  hibernate:
+    ddl-auto: update
+  show-sql: true
+  database-platform: org.hibernate.dialect.Oracle12cDialect
